zzz_GramatykaEBNF_NEW.txt
////////////////////////////////////////////////////////////////////////////////////////////////////////////////

digit_sequence = digit , { digit | "_" , digit } ;
int_literal    = digit_sequence ;
float_literal  = digit_sequence , "." , digit_sequence ;
string_literal  = " \" " , { string_char } , " \" " ;
list_literal    = "[" , [ expression , { "," , expression } ] , "]" ;
char_literal    = " ' " , char_char , " ' " ;
bool_literal    = "true" | "false" ;

literal         = float_literal
                | int_literal
                | string_literal
                | char_literal
                | bool_literal
		| list_literal ;

identifier      = letter , { letter | digit | "_" } ;
identifier_list = identifier , { "," , identifier } ;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////

type            = value_type
                | "void" ;

value_type      = basic_value_type
                | list_type
                | user_type ;
basic_value_type
                = "int"
                | "uint"
                | "float"
                | "bool"
                | "char"
                | "string" ;

list_type       = "list" , "<" , value_type , ">" ;
user_type       = identifier ;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////

program         = { import_decl } , { top_level_decl } ;

top_level_decl  = class_decl
                | function_decl
                | global_const_decl ;

global_const_decl	= 		value_type , identifier_list , [ "=" , expression ] ;
variable_decl_stmt	= [ "mut" ] , 	value_type , identifier_list , [ "=" , expression ] ;

block           = "{" , { statement } , "}" ;

statement       = variable_decl_stmt
                | expression_or_assignment_stmt
                | return_stmt
                | if_stmt
                | while_stmt
                | for_stmt
                | block ;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////

import_spec     = "*"
                | identifier , { "," , identifier } ;

import_decl     = "import" , import_spec , "from" , string_literal ;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////

parameter_list  = parameter , { "," , parameter } ;

parameter       = identifier , ":" , value_type ;

function_decl 	= 	"fun" , identifier ,
                	"(" , [ parameter_list ] , ")" ,
                	"->" , type ,
                	block ;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////

class_decl      = "class" , identifier , "{" , { class_member } , "}" ;

constructor_decl
                = identifier ,
                  "(" , [ parameter_list ] , ")" ,
                  block ;

class_member    = field_decl
                | method_decl
                | constructor_decl ;

field_modifier  = "private"
                | "static" ;

field_decl      = [ field_modifier ] ,
                  identifier_list , ":" , value_type ,
                  [ "=" , expression ] ;

method_modifier = "mut"
                | "static" ;

method_decl     = [ method_modifier ] ,
                  function_decl;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////

expression_or_assignment_stmt
                = expression , [ "=" , expression ] ;

return_stmt     = "return" , [ expression ] ;

if_stmt         = "if" , expression , block ,
                  { "else" , "if" , expression , block } ,
                  [ "else" , block ] ;

while_stmt      = "while" , expression , block ;

for_stmt        = "for" , value_type , identifier , "in" , expression , block ;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////

expression = logical_or_expr ;

logical_or_expr = logical_and_expr ,
                  { "||" , logical_and_expr } ;

logical_and_expr
                = equality_expr ,
                  { "&&" , equality_expr } ;

equality_expr   = relational_expr ,
                  [ ( "==" | "!=" | "contains" ) , relational_expr ] ;

relational_expr = additive_expr ,
                  [ ( "<" | "<=" | ">" | ">=" ) , additive_expr ] ;

additive_expr   = multiplicative_expr ,
                  { ( "+" | "-" ) , multiplicative_expr } ;

multiplicative_expr
                = list_operator_expr ,
                  { ( "*" | "/" ) , list_operator_expr } ;

list_operator_expr
                = map_expr ;

map_expr        = filter_expr ,
                  { "|>" , filter_expr } ;

filter_expr     = group_expr ,
                  { "?" , group_expr } ;

group_expr      = cast_expr ,
                  { "%" , cast_expr } ;

cast_expr       = unary_expr ,
                  { "as" , value_type } ;

unary_expr      = unary_op , unary_expr
                | power_expr ;

power_expr      = postfix_expr ,
                  [ "^" , unary_expr ] ;

unary_op        = "-"
                | "!"
                | "count"
                | "reverse"
                | "flatten" ;


primary_expr    = literal
                | identifier
                | "(" , expression , ")"
                | "this" ;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////

argument_list   = expression , { "," , expression } ;
call_suffix     = "(" , [ argument_list ] , ")" ;
index_suffix    = "[" , expression , "]" ;
slice_suffix    = "[" , [ expression ] , ":" , [ expression ] , "]" ;

postfix_expr    = primary_expr , { postfix_op } ;
postfix_op      = 	"." , identifier , [ call_suffix ]
                	| index_suffix
               		| slice_suffix
                	| call_suffix ;

////////////////////////////////////////////////////////////////////////////////////////////////////////////////
